changed datetime box height to 40px to try to fix the thin box on mobile

--- a/app/assets/stylesheets/pages/_appointments_new.scss
+++ b/app/assets/stylesheets/pages/_appointments_new.scss
@@ -14,6 +14,7 @@
   .datetime-box {
     margin-right: 0 !important;
     margin-left: 0 !important;
+    height: 40px;
   }
 }
 
